// Vitest Snapshot v1

exports[`renders in the loading state 1`] = `
<div>
  <button
    class="storybook-button storybook-button--medium storybook-button--primary"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`renders in the loading state 2`] = `
<div>
  <button
    class="storybook-button storybook-button--medium storybook-button--secondary"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`renders in the loading state 3`] = `
<div>
  <button
    class="storybook-button storybook-button--large storybook-button--secondary"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`renders in the loading state 4`] = `
<div>
  <button
    class="storybook-button storybook-button--small storybook-button--secondary"
    type="button"
  >
    Button
  </button>
</div>
`;
